--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "stagas",
   "short": "stagas/everyday-utils",
   "description": "Everyday utilities",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "build:dist": "npm run build:bundle && npm run build:min",
     "cov:watch": "utr --coverage --watch",
     "clean": "rimraf dist",
-    "docs": "dokio -o README.md && dprint fmt README.md",
+    "docs": "dokio -o README.md",
     "test": "utr",
     "cov": "utr --coverage",
     "build": "npm run build:cjs & npm run build:esm & npm run build:types && echo done.",
@@ -40,8 +40,8 @@
     "build:types": "tsc -p tsconfig.dist.json --outDir dist/types",
     "build:bundle": "bunzee src/index.ts \"dist/$(cat package.json | jq -r '.name').js\"",
     "build:min": "bunzee -m src/index.ts \"dist/$(cat package.json | jq -r '.name').min.js\"",
-    "lint": "eslint src && dprint check",
-    "lint:fix": "eslint --fix src && dprint fmt",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src",
     "prepack": "npm run clean && npm run build && (npm run build:dist || echo unable to bundle)",
     "prepack:dry": "npm pack --dry-run",
     "prepush": "npm run lint && npm run test",
@@ -60,8 +60,8 @@
     "@typescript-eslint/parser": "5.31.0",
     "bunzee": "^1.0.0",
     "chokidar": "3.5.3",
-    "devito": "^1.3.3",
-    "dokio": "^1.0.1",
+    "devito": "^2.0.0",
+    "dokio": "^1.1.0",
     "dprint": "0.30.3",
     "eslint": "8.20.0",
     "eslint-config-html-jsx": "^1.0.0",
@@ -73,7 +73,7 @@
     "rimraf": "3.0.2",
     "swcno": "0.1.1",
     "typescript": "4.7.3",
-    "utr": "^1.2.1"
+    "utr": "^1.3.3"
   },
   "dependencies": {
     "deep-mutate-object": "^1.0.1",
