--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "@typescript-eslint/parser": "5.31.0",
     "bunzee": "^1.0.0",
     "chokidar": "3.5.3",
-    "devito": "file:../devito",
-    "dokio": "file:../dokio",
+    "devito": "^2.1.0",
+    "dokio": "^1.1.0",
     "dprint": "0.30.3",
     "eslint": "8.20.0",
     "eslint-config-html-jsx": "^1.0.0",
@@ -74,12 +74,12 @@
     "rimraf": "3.0.2",
     "swcno": "0.1.1",
     "typescript": "4.7.3",
-    "utr": "file:../utr"
+    "utr": "^1.3.4"
   },
   "dependencies": {
     "deep-mutate-object": "^1.0.1",
     "everyday-types": "^1.1.0",
-    "pick-omit": "file:../pick-omit",
-    "to-fluent": "file:../to-fluent"
+    "pick-omit": "^2.0.1",
+    "to-fluent": "^2.2.0"
   }
 }
