--- a/package.json
+++ b/package.json
@@ -42,11 +42,7 @@
     "build:bundle": "bunzee src/index.ts \"dist/$(cat package.json | jq -r '.name').js\"",
     "build:min": "bunzee -m src/index.ts \"dist/$(cat package.json | jq -r '.name').min.js\"",
     "lint": "eslint src",
-    "lint:fix": "eslint --fix src",
-    "prepack": "npm run clean && npm run build && (npm run build:dist || echo unable to bundle)",
-    "prepack:dry": "npm pack --dry-run",
-    "prepush": "npm run lint && npm run test",
-    "prepare": "husky install"
+    "lint:fix": "eslint --fix src"
   },
   "devDependencies": {
     "@n1kk/intspector": "1.0.2",
